[package]
name = "bevy_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.7.0"}
bevy-inspector-egui = "0.11.0"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}

[profile.dev.package."*"]
opt-level = 3